--- a/styles.css
+++ b/styles.css
@@ -52,12 +52,11 @@
 /* Custom styles */
 .flex-container {
   display: flex; 
-  min-height: 100vh;
-  flex-direction: row;
+  flex-wrap: wrap;
 }
 
 .flex-item{
-  flex: 1;
+  width: 200px;
 }
 
 @media screen and (max-width: 650px) {
