--- a/styles.css
+++ b/styles.css
@@ -53,15 +53,23 @@
 .flex-container {
   display: flex; 
   flex-wrap: wrap;
+  height: 100vh; 
+  /* padding: 5px; */ 
+  gap: 10px;
 }
+
+
 
 .flex-item{
-  width: 200px;
+  width: calc(33.33% - 10px);
+  /* margin: 5px; */
+
+
 }
 
-@media screen and (max-width: 650px) {
+/* @media screen and (max-width: 650px) {
   .flex-container{
     flex-direction: column;
   }
   
-}
+} */
