--- a/styles.css
+++ b/styles.css
@@ -51,20 +51,17 @@
 
 /* Custom styles */
 .flex-container {
-  display: flex; 
-  flex-wrap: wrap;
-  height: 100vh; 
+  display: flex;
+  /* height: 100vh;  */
   /* padding: 5px; */ 
-  gap: 10px;
+  justify-content: space-between;
 }
 
 
 
 .flex-item{
-  width: calc(33.33% - 10px);
+  width: 100px;
   /* margin: 5px; */
-
-
 }
 
 /* @media screen and (max-width: 650px) {
